--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -40,7 +40,7 @@ code_word_wrap: false
 copy:
   enable: true
   copyright:
-    enable: false
+    enable: true
     limit_count: 50
 
 # social settings (社交圖標設置)
@@ -143,6 +143,7 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
+    - https://file.crazywong.com/gh/jerryc127/CDN@latest/cover/default_bg.png
     # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
 
 # Replace Broken Images (替換無法顯示的圖片)
@@ -209,7 +210,7 @@ toc:
 
 post_copyright:
   enable: true
-  decode: true
+  decode: false
   author_href: "墨墨辰"
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
@@ -449,7 +450,7 @@ footer:
   owner:
     enable: true
     since: 2020
-  custom_text:
+  custom_text: Hi, welcome to my <a href="https://the-black-sun.github.io/">blog</a>!
   copyright: true # Copyright of theme and framework
 
 # Analysis
