--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -9,8 +9,9 @@ menu:
     标签: /tags/ || fas fa-tags
     分类: /categories/ || fas fa-folder-open
   生活 || fas fa-list||hide:
-    手残画册: /photos/ || fa fa-camera-retro
-    音痴教室: /music/ || fa fa-music
+    墨墨辰的收集画册: /photos/ || fa fa-camera-retro
+    墨墨辰的手残画室: /studio/ || iconfont icon-huabi
+    墨墨辰的音乐收集记录: /music/ || fa fa-music
   友情链接: /link/ || fa fa-link
   留言板: /comment/ || fa fa-paper-plane
   关于我: /about/ || fas fa-heart
@@ -660,6 +661,7 @@ subtitle:
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
     - 要看很多电影，要看很多的书，毕竟每天都很短暂。
+    - 务必要疯狂地怀抱雄心，且还要疯狂地真诚。
 
 # Loading Animation (加載動畫)
 preloader:
@@ -694,7 +696,7 @@ aside:
       link: https://github.com/The-Black-Sun
   card_announcement:
     enable: true
-    content: "第一条没什么用的公告：测试版个人博客上线"
+    content: "第一篇博文发布了！"
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
