1、代码块部分设置修改

--- a/_config.yml
+++ b/_config.yml
@@ -46,13 +46,13 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: false
+  line_number: true
   auto_detect: false
-  tab_replace: ''
+  tab_replace: ""
   wrap: true
   hljs: false
 prismjs:
-  enable: true
+  enable: false
   preprocess: false
   line_number: false
   tab_replace: ""
